fix insert field text wrapping

--- a/src/main/main.css
+++ b/src/main/main.css
@@ -47,6 +47,7 @@
   border-radius: 8px;
   padding: 6px 8px 2px 6px;
   transition: opacity 0.3s ease-in;
+  white-space: nowrap;
 }
 
 #zyr-insert-hide-button {
